addt table user voucher to storage voucher of user